2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove {expand,suffix,version,zone}arg from global state of co(1).

	* co.c (expandarg, suffixarg, versionarg, zonearg): Delete vars.
	(struct jstuff): Add members ‘expand’, ‘suffix’, ‘version’, ‘zone’.
	(buildjoin): Use ‘js->expand’,
	‘js->suffix’, ‘js->version’, ‘js->zone’.
	(main): Use ‘jstuff.suffix’, ‘jstuff.version’,
	‘jstuff.zone’, ‘jstuff.expand’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘joinlist’, ‘lastjoin’ from global state of co(1).

	* co.c (joinlist, lastjoin): Delete vars.
	(struct jstuff): Add members ‘ls’, ‘lastidx’.
	(jpush): Use ‘js->lastidx’.
	(preparejoin): Likewise; use ‘js->ls’.
	(buildjoin): Use ‘js->lastidx’, ‘js->ls’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘jstuff’ from global state of co(1).

	* co.c (jstuff): Delete var.
	(jpush): Take 2nd arg ‘js’; use ‘js->’.
	(addjoin): Take 2nd arg ‘js’; update call to ‘jpush’.
	(preparejoin): Take 2nd arg ‘js’; use ‘js->’;
	update call to ‘addjoin’, ‘jpush’.
	(buildjoin): Take 2nd arg ‘js’; use ‘js->’.
	(main): Add auto var ‘jstuff’;
	update calls to ‘preparejoin’, ‘buildjoin’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘workstat’ from global state of co(1).

	* co.c (struct work): New.
	(workstat): Delete var.
	(rmworkfile): Take arg ‘work’; use ‘work->st’.
	(main): Add auto var work; use ‘work.st’;
	update calls to ‘rmworkfile’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘insDelFormat’ from global state of rlog(1).

	* rlog.c (insDelFormat): Delete var.
	(putadelta): Take 4th arg ‘insDelFormat’.
	(putrunk): Take arg ‘insDelFormat’; update call to ‘putadelta’.
	(putforest): Update forward func decl.
	(putree): Take 2nd arg ‘insDelFormat’;
	update calls to self, ‘putforest’.
	(putabranch): Take 2nd arg ‘insDelFormat’;
	update calls to self, ‘putadelta’.
	(putforest): Take 2nd arg ‘insDelFormat’;
	update calls to self, ‘putabranch’, ‘putree’.